fixed text center issue in about page

--- a/app/components/SocialIcons.module.css
+++ b/app/components/SocialIcons.module.css
@@ -10,8 +10,11 @@
 
 .icon {
     font-size: 2em;
-    color: black;
     transition: transform 0.3s, color 0.3s;
+}
+
+.icon .facebook {
+    color: #3b5998;
 }
 
 .icon:hover {
